--- a/document/source/body.tex
+++ b/document/source/body.tex
@@ -849,9 +849,9 @@ The results of all tests are provided in Table~\ref{Overtaking_Profiles}, which 
 The table shows that it would have been inadvisable to perform a `relaxed' overtake in any of the three scenarios presented, as this would have resulted in a near miss or a collision. If a `nominal' overtake is attempted (which actually corresponds to the behaviour of the AV in the scenarios), this policy was acceptable for the `Safe' scenario, but inadvisable for the `Near Miss' and `Collision' scenarios (as their descriptive names imply). Finally, if the AV had been programmed to overtake aggressively in these scenarios, then only in the case of the Collision scenario circumstances would the Distance Ahead have been short enough for the manoeuvre to be inadvisable; in the other two cases the overtake could have been achieved successfully (although aggressive overtaking may result in other safety assertions being violated).
 
 \subsection{Runtime monitoring case study}
-In many real driving scenarios, environmental conditions that may have been checked and found safe at the beginning may cease to be true or valid as the scenario progresses, and driving plans or actions may need to be altered midway through as a consequence. Therefore, it can be highly advisable for autonomous vehicles to evaluate assertions continually during runtime, to detect the onset of hazards as a cue for changes of strategy.
+In our experimental study of runtime monitoring we developed an assertion monitor for checking safe stopping distance during the overtake. However, the SDA check is only applicable at the \textit{start} of an overtake - it says nothing about whether separation distances \textit{remain} safe at later stages of the manoeuvre.
 
-In our experimental study of runtime monitoring we developed an assertion monitor for checking safe stopping distance during the overtake. 
+In many real driving scenarios, environmental conditions that may have been checked and found safe at the beginning may cease to be true or valid as the scenario progresses, and driving plans or actions may need to be altered midway through as a consequence. Therefore, it can be highly advisable for autonomous vehicles to evaluate assertions continually during runtime, to detect the onset of hazards as a cue for changes of strategy.
 %
 To demonstrate the use of assertions at runtime, in the absence of a roadworthy AV controller, we analysed public domain video footage of an attempted overtaking manoeuvre in a manually driven car.\footnote{Link to video used in analysis: \url{https://youtu.be/Gzi4X7WZkRI} time period 01:30 to 01:45 minutes.} The video shows a scenario within a road journey, where an overtake manoeuvre was initiated because the road ahead appeared clear in the opposite lane to allow a safe manoeuvre. However, during the manoeuvre an oncoming vehicle, which had been obscured by a combination of a slight dip and a minor bend in the road, suddenly became visible at a distance that did not allow the manoeuvre to be completed safely, and the human driver was forced to abort the overtake and pull back into the running lane behind the VBP \footnote{The cause of this error was a mistake in estimating the safe distance ahead, which should have treated the observable line of sight as the available distance ahead, in the absence of any directly visible OV. Since we were only intending to demonstrate the principle of assertion checking in our simulation study, we eliminated this complication from the simulation scenario deliberately, by using a map of a long straight road section where an OV would always be visible.}. Such situations occur frequently in typical (complex) real-world road layouts, if vehicles change speed or if for any other reason the SDA calculation at the start of the manoeuvre gives misleading estimates. 
 
@@ -911,7 +911,7 @@ These four assertions were evaluated in the selected video file by means of vide
     \caption{Simulation experiment driving paths for each scenario.}
     \label{fig:Runtime_timeline}
 \end{figure} 
-
+%\todo[inline]{need to explain the transient just after the initial change of state in Fig.6}
 
 \subsubsection{Video processing}
 %
@@ -973,19 +973,22 @@ Table~\ref{Overtaking_DS_table} shows the results for the six assertions introdu
 	\caption{Pass/Fail danger space assertion checks results for the runtime monitoring study. } \label{Overtaking_DS_table}
 \end{table}
 Note: The use of intersection symbols in the table is shorthand for a `does not overlap' relation between polygons. 
-\vspace{2mm}
+%\vspace{2mm}
+The four assertions were checked against every frame, and were found to change from ``PASS'' to ``FAIL'' approximately six seconds after the start of the overtake manoeuvre, as the oncoming vehicle suddenly became visible. Due to the degradation of video quality, caused by prevailing ambient conditions (light rain), and the small size of the OV object image in the video frame at that time, a transient state change occurs as shown in \ref{fig:Runtime_timeline} at 96s, where the evaluation of the assertions reverts back to ``PASS'' for a few frames before going back unambiguously to ``FAIL''. This emphasizes the need for good quality environmental sensing (e.g. high resolution cameras) to obtain clearly defined changes of state. Figure \ref{fig:Runtime_timeline} also shows that all safety assertions fail simultaneously. This is due to the fact that the obscuration of the OV was cleared with only a short separation distance between the ego-vehicle and the OV, so assertions (2)-(4) all failed immediately as soon as they became measurable. In a scenario where the OV is visible from the start, one would expect assertion (4) (no overlap between DS$_{AV}$ and DS$_{OV}$) to fail first, followed shortly by (2) and (3) as the vehicles drew closer together.
 
-When passing the VBP, the assertion checks indicate that the overtake should have been aborted or if it was aborted then it should have been aborted earlier during the passing the VBP stage as both the AV and the OV have entered each others danger spaces. 
+The change of evaluation state of the assertions part way through the overtake manoeuvre clearly shows the value of applying them as runtime monitoring checks. For example, the transitions can be used as input signals to the AV control system to prompt an emergency avoidance action.
+%When passing the VBP, the assertion checks indicate that the overtake should have been aborted or if it was aborted then it should have been aborted earlier during the passing the VBP stage as both the AV and the OV have entered each others danger spaces. 
 
-Finally, at the last stage of the overtake, the assertion checks suggest that the AV has attempted to cut in before it has completely overtaken the VBP, whilst still failing the assertions relating to the OV. However, the AV has passed the assertion of not being in the DS$_{VBP}$, which suggests, given all of the other assertions have failed, that it has not overtaken the VBP before cutting in.
+%Finally, at the last stage of the overtake, the assertion checks suggest that the AV has attempted to cut in before it has completely overtaken the VBP, whilst still failing the assertions relating to the OV. However, the AV has passed the assertion of not being in the DS$_{VBP}$, which suggests, given all of the other assertions have failed, that it has not overtaken the VBP before cutting in.
 
 % Do we need pass, fail, unknown, n/a enumerated lists
 
-\todo[inline]{unclear}
+%\todo[inline]{unclear}
 % \todo[inline]{A table note must be added to explain the use of intersection symbols as shorthand for a "does not overlap" relation between two polygons.}
 % \todo[inline]{In table:, ``No DS...'' should be intersection between the DSs is empty. Strictly speaking, the DSs should be defined as sets earlier on.}
 
 \section{Discussion} \label{discussion}
+The initial work presented in this paper has raised a number of consequent issues that require further investigation.
 
 \subsection{Assertion Checking to measure Performance}
 While we have applied the assertion checking methodology to measure the safety properties of vehicles in simulation and at runtime, the methodology can also be extended to validate other important system properties. This may include performance based metrics such as smooth driving (minimal jerk), accuracy of control (such as parking or stopping precisely, e.g.\ at a bus stop), and decisive behaviour at junctions or roundabouts, sometimes termed \emph{liveness}~\cite{kim2014mpc}. In particular, the mission performance of a vehicle, for example, can be measured in journey time or efficiency of movement through traffic, which may affect not only passenger expectations but also the commercial viability of such an autonomous system. 
@@ -1123,16 +1126,16 @@ There is therefore a trade-off between safety and performance for optimal drivin
 % \end{figure}
 
 % \subsection{The Significance of Agent Intentions during Assertion Checking} %in Defining Validation Cases} \label{discussion_of_results}
-\subsection{Agent Intentions during Assertion Checking}
-The initial work presented in this paper has raised a number of consequent issues that require further investigation. One significant topic is the extent to which assertions require access to states of internal decision making within the autonomous vehicle being monitored. Many UKHC rules are advisories to %drivers or other road users to be aware of 
-potentially hazardous situations, and to actively perceive, deliberate, and take special or particular action to avoid harmful events. 
+\subsection{Assertion Checking of Rules about AV Intentions, Planning and Reasoning}
+
+
+One significant topic of future study relates to the extent to which assertions require access to states of internal decision making within the autonomous vehicle being monitored. The taxonomy of assertions presented in Section \ref{assertion_categories}, and the methodology we have developed for deriving them from UKHC rules, is applicable to rules that define externally observable states or behaviours of the AV in its road environment. However, many UKHC rules are advisories to drivers %or other road users to be aware of 
+regarding potentially hazardous situations, making recommendations on how to actively perceive, deliberate, and select special or particular action to avoid harmful events. These rules (or clauses within rules) cannot be validated purely by external measurements of situated state and behaviour alone - they require information about the internal state of the AV algorithms, to determine whether those algorithms have been making perceptions, plans or action selection decisions as these kinds of rule recommend.
+
+For example, referring to UKHC Rule 163 listed in Section \ref{interp_nat_lang_UKHC_rules}, the second bullet-item provides the following advice about the sequence of perceptions and decisions related to overtaking: \textit{``use your mirrors, signal when it is safe to do so, take a quick sideways glance if necessary into the blind spot area and then start to move out''}. The rule requires that drivers make specific perceptions, for example into the vehicle blind spot area, prior to any decision to change lane. However, this rule clause can only be validated by checking the internal perception and reasoning of the AV control system to confirm that it had made such perceptions and decisions in the preferred order. This cannot be inferred by measuring the (externally objective) position or velocity of the vehicle; instead, the AV control system must declare what internal perception or reasoning it may have made in order to select a given action.
 % 
 % GC think we should just focus on one or two of these points
-An excerpt from Rule 146 of the UKHC states \begin{quote} \textit{Try to anticipate what pedestrians and cyclists might do. If pedestrians, particularly children, are looking the other way, they may step out into the road without seeing you.} \end{quote} which specifically asks to perceive and anticipate future developments of the situation. To validate the correctness of an AV's behaviour in respect of these rules we must have the capability to inspect the observations and decisions made by the AV or its control system.
-
-
-
-
+%An excerpt from Rule 146 of the UKHC states \begin{quote} \textit{Try to anticipate what pedestrians and cyclists might do. If pedestrians, particularly children, are looking the other way, they may step out into the road without seeing you.} \end{quote} which specifically asks to perceive and anticipate future developments of the situation. To validate the correctness of an AV's behaviour in respect of these rules we must have the capability to inspect the observations and decisions made by the AV or its control system.
 
 % GC Removed this ***
 % The following extracted rule is an example:
@@ -1158,45 +1161,39 @@ An excerpt from Rule 146 of the UKHC states \begin{quote} \textit{Try to anticip
 
 % At present, we are not in a position to perform assertion checking for this kind of safety property by means of an independent assertion-based oracle. There is no externally objective way to observe whether an AV agent is actually performing deliberative reasoning, planning or action selection consistent with rules such as Rule 146, unless it communicates explicitly its planning and decision-making through an interface, whose information can be read by the oracle for checking. A standard protocol for reporting decision-making information would need to be developed and at time of writing no such standard for doing this has been agreed. And given the commercially sensitive nature of such information, we do not anticipate that manufacturers would be willing to design systems that volunteer such information without legal requirements to do so and a standard protocol to use.
 % =======
-This case highlights the need for \emph{explainable AI}, a topic gaining increasing attention in the AI, robotics and autonomous systems community. The opinion is widely held \cite{deeks2019judicial, o2019legal, wortham2020transparency} that it may be essential for any such system employed in a safety related application to be able to explain its decision making. 
+This example highlights the need for \emph{explainable AI}, a topic gaining increasing attention in the AI, robotics and autonomous systems community. The opinion is widely held \cite{deeks2019judicial, o2019legal, wortham2020transparency} that it may be essential for any such system employed in a safety related application to be able to explain its decision making.
 %
 In many AI technologies the internal representations of perceptions or decisions are complexity and opaque, which makes the task of identifying, by manual inspection, how a system might have come to a particular decision extremely difficult. When combined with the non-deterministic nature of complex operational situations in real world environments, this means that particular decisions may not be repeatable in post-incident analysis without the system being able to report the precise situation that it perceived, and the planning or action-selection decisions that it made as a consequence. 
 %This requires some form of communication protocol or interface from the perception and decision-making centres of the system to the outside world, so that the decisions can be observed and recorded for later analysis. 
 %
-This opens up a significant opportunity for the use of assertion-based runtime monitoring as discussed in Section~\ref{assertions_at_run_time}.
+This creates a significant opportunity for the use of assertion-based runtime monitoring as discussed in Section~\ref{assertions_at_run_time}.
 
-\todo[inline]{Please consider taking the following two paras out.}
-At present, however, we are not in a position to perform independent validation of this kind of safety property through assertion checking.
+The existence of 'cognitive rules' in the driving code of conduct suggests that the taxonomy of assertion types described in Section \ref{assertion_categories}, while a comprehensive classification of assertions for 'objective rules', may require extension to address the classification of assertions for cognitive rules. We will address this issue in future work.
+%\todo[inline]{Please consider taking the following two paras out.}
+%At present, however, we are not in a position to perform independent validation of this kind of safety property through assertion checking.
 %by means of an independent assertion-based oracle
-To date, there is no objective way to observe whether an AV agent is actually performing deliberative reasoning, planning or action selection consistent with rules such as Rule 146, unless it communicates explicitly its planning and decision-making through an interface, whose information can be read by the oracle for checking. A standard protocol for reporting decision-making information would need to be developed and at time of writing no such standard for doing this has been agreed. Furthermore, given the commercially sensitive nature of such information, we do not anticipate that manufacturers would be willing to design systems that volunteer such information without legal requirements to do so and a standard protocol to use.
+%To date, there is no objective way to observe whether an AV agent is actually performing deliberative reasoning, planning or action selection consistent with rules such as Rule 146, unless it communicates explicitly its planning and decision-making through an interface, whose information can be read by the oracle for checking. A standard protocol for reporting decision-making information would need to be developed and at time of writing no such standard for doing this has been agreed. Furthermore, given the commercially sensitive nature of such information, we do not anticipate that manufacturers would be willing to design systems that volunteer such information without legal requirements to do so and a standard protocol to use.
 % >>>>>>> 73dcf5c238b93d3bf13283edf1ff00e8dcb5fd58
 
-In the absence of any such explanation, it is still possible to achieve some degree of validation by performing checks derived from the text of the rule, which attempt to challenge the hypothesis expressed or implied by the UKHC rule or rule clause (\emph{e.g.\ falsification testing}) of the safety property. 
+%In the absence of any such explanation, it is still possible to achieve some degree of validation by performing checks derived from the text of the rule, which attempt to challenge the hypothesis expressed or implied by the UKHC rule or rule clause (\emph{e.g.\ falsification testing}) of the safety property. 
 %
 %For example, in the testing phase of an AV, to exercise the last bullet item of Rule 146 above one could construct a test case, perhaps similar in nature to those defined in~\cite{EuroNCAP}, where simulated `children agents' (that model the physical appearance of children as well as some aspects of their behaviour) step out into a road in front of the AV agent, having appeared either to be looking away from an AV agent, towards it, or some mix of the two focuses of attention. 
-For example, an AV could be tested for compliance with the last bullet item of Rule 146 through simulation scenarios, perhaps similar in nature to those defined in~\cite{EuroNCAP}, in which simulated `children pedestrians' step out into a road in front of the AV agent. Variations on this scenario can establish the child-agent, which should model the physical appearance of children as well their pedestrian behaviour, as appearing either to be looking away from an AV agent, towards it, or some mix of the two focuses of attention.
+%For example, an AV could be tested for compliance with the last bullet item of Rule 146 through simulation scenarios, perhaps similar in nature to those defined in~\cite{EuroNCAP}, in which simulated `children pedestrians' step out into a road in front of the AV agent. Variations on this scenario can establish the child-agent, which should model the physical appearance of children as well their pedestrian behaviour, as appearing either to be looking away from an AV agent, towards it, or some mix of the two focuses of attention.
 %
-Such test cases could assess the capability of the AV control system to evaluate the potential behaviour of children to determine what driving action can be taken successfully and safely. This can test the `end-to-end' situated behaviour of the vehicle and thereby evaluate the cumulative effect of decision making but, as evidence to support a safety case, this is less effective than explicit confirmation (by recording) of the AV's decision process that would come from explainable AI.
+%Such test cases could assess the capability of the AV control system to evaluate the potential behaviour of children to determine what driving action can be taken successfully and safely. This can test the `end-to-end' situated behaviour of the vehicle and thereby evaluate the cumulative effect of decision making but, as evidence to support a safety case, this is less effective than explicit confirmation (by recording) of the AV's decision process that would come from explainable AI.
 
 \section{Conclusion}\label{conclusion}
-\todo[inline]{Revise: cover contributions, ...}
+%\todo[inline]{Revise: cover contributions, ...}
 
 In this paper we have presented a methodology to systematically derive formal logical expressions, encoded as assertions, from the UKHC. We have introduced a process for monitoring assertions that can be used for simulation-based assertion checking and runtime monitoring during operation.
-\todo[inline]{complete with reference to abstract and first section - contributions}
-
-The results obtained from both the simulation and the runtime video analysis case studies show the general feasibility and utility of assertion-based safety validation, with the assertions being derived from regulatory documentation written in natural language and intended for human drivers rather than written specifically to be usable by computer. The results provide our first indication that human-oriented natural language rules for driving are an effective oracle for assessment of artificial systems.
-
-The case studies were carried out at an early stage of development so we did not employ every element of the methodology that has emerged. Nevertheless, we believe that enough of the process has been demonstrated to show that the full methodology is viable.\todo[inline]{focus on what we did, not what we did not do - state that this illustrates, rather than ``we believe''.}
-%
+We have also developed a taxonomic classification of assertion types that are applicable to checking of rules that can be evaluated by objective measurement. This scheme reveals key aspects of assertion design, such as assertion reference points and trigger expressions, which should be incorporated in any program code to execute the checks. This helps to ensure the verification that assertions are expressed correctly. We have developed SQL-based programming schemes for encoding the assertions, and demonstrated their use on a PostgreSQL/PostGIS database, which receives simulation trace data from a Carla simulator running an AV simulation scenario. We have also applied assertion checks to sample video data to emulate the use of assertion checking as a runtime monitoring technique.
+%\todo[inline]{complete with reference to abstract and first section - contributions}
+The results obtained from both the simulation and the runtime video analysis case studies show the general feasibility and utility of assertion-based safety validation, with the assertions being derived from regulatory documentation written in natural language and intended for human drivers rather than written specifically to be usable by computer. The results provide our first indication that human-oriented natural language rules for driving are an effective oracle for assessment of artificial systems. %The case studies were carried out at an early stage of development so we did not employ every element of the methodology that has emerged. Nevertheless, we believe that enough of the process has been demonstrated to show that the full methodology is viable.\todo[inline]{focus on what we did, not what we did not do - state that this illustrates, rather than ``we believe''.}
 We also present the idea of using UKHC-based assertion checking methodology as a method to infer autonomous vehicle performance and have demonstrated this with an overtaking scenario using simulation results. We have demonstrated that a common UKHC assertion-based oracle is equally as usable in runtime monitoring as it is in simulation.
-
-
 % GC condensed this section:
-% \subsection{Future Work}\label{future_work}
-We are considering numerous directions in which to continue this work such as extending the sources of information for safe driving, e.g.\ using the German driving regulations~\cite{acountability}, and models such as the RSS model~\cite{RSS_Shalev_Shwartz2017,RSS2_Koopman2019}. We are also researching the use of the testbench to perform falsification testing~\cite{corso2020survey, akazaki2017causality} and \emph{situation coverage testing}~\cite{alexander2015} and how other techniques such as \emph{Environmental Survey Hazard Analysis}~\cite{harper2021towards} can be used. We also aim to investigate assertion checking to provide reward function scores as a critic in reinforcement learning for continuous improvement of the AVs balance between safety and liveness during operation.
+%\subsection{Future Work}\label{future_work}
 
-
-
+We are considering numerous directions in which to continue this work such as extending the sources of information for safe driving, e.g.\ using the German driving regulations~\cite{acountability}, and models such as the RSS model~\cite{RSS_Shalev_Shwartz2017,RSS2_Koopman2019}. We are also researching the use of the testbench to perform falsification testing~\cite{corso2020survey, akazaki2017causality} and \emph{situation coverage testing}~\cite{alexander2015} and how other techniques such as \emph{Environmental Survey Hazard Analysis}~\cite{harper2021towards} can be integrated with the methodology. We also aim to investigate assertion checking to provide reward function scores as a critic in reinforcement learning for continuous improvement of the AVs balance between safety and liveness during operation.
 % GC removed
 % \subsection{Future Work}\label{future_work}
 % In addition to the ongoing work of development of the BRL Simulator Testbench, we are considering numerous other directions in which to continue this work:
